# Vadem

./: .gitignore  BACKEND.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
YuumiPal Mockup/: YuumiPal.html  app.jsx  data.jsx  overlay.jsx  primitives.jsx  styles.css
YuumiPal Mockup/screens/: builds.jsx  dashboard.jsx  draft.jsx  macro.jsx  match-detail.jsx  profile.jsx  settings.jsx
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  champ_scaling.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: inference.rs  lcu.rs  lol_config.rs  mod.rs  settings.rs  spells.rs
src-tauri/src/hooks/: keyboard.rs
src-tauri/src/models/: api.rs  events.rs
src-tauri/src/services/: lcu_ws.rs  league_poller.rs  ml_service.rs  mod.rs
src-tauri/src/state/: game_state.rs
src/api/: auth.ts  builds.ts  champions.ts  client.ts  draft.ts  matches.ts  player.ts  settings.ts
src/components/: AppShell.tsx  Badge.tsx  Champ.tsx  Icon.tsx  LayoutEditor.tsx  OverlayPanel.tsx  Primitives.tsx  SpellRow.tsx  WinMeter.tsx  Wip.tsx
src/data/: mockData.ts
src/hooks/: useGameState.ts  useSettings.ts  useTabKey.ts
src/screens/: BuildsScreen.tsx  DashboardScreen.tsx  DraftScreen.tsx  LoginScreen.tsx  MacroScreen.tsx  MatchDetailScreen.tsx  OverlayPreviewScreen.tsx  ProfileScreen.tsx  PublicProfileScreen.tsx  SettingsScreen.tsx
src/store/: authStore.ts  gameStore.ts  spellStore.ts
src/styles/: globals.css
src/utils/: ddragon.ts  winProb.ts
src/windows/: Dashboard.tsx  TabOverlay.tsx  TimersOverlay.tsx
