[package]
name = "vadem"
version = "2.0.0"
description = "Vadem — League of Legends overlay"
authors = ["marin"]
edition = "2021"

[lib]
name = "vadem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
ort                = { version = "2.0.0-rc.12", features = ["download-binaries"] }
rdev               = "0.5"
parking_lot        = "0.12"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
